Fix for long URLs in comments
Long URLs in the comments area were overflowing their container. This
was particularly an issue with zoom levels on mobile browsers.

--- a/style.css
+++ b/style.css
@@ -792,6 +792,12 @@ ul.archive-list {
 	font: 14px/1.65em Georgia, serif;
 	font-size: 1.4rem;
 	width: 100%;
+	-ms-word-break: break-all; 
+	word-break: break-all; 
+	word-break: break-word; 
+	-webkit-hyphens: auto; 
+	-moz-hyphens: auto; 
+	hyphens: auto;
 }
 .comment .reply {
 	font: 14px/1.5em Georgia, serif;
